--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -25,5 +25,48 @@
             </nav>
         </div>
     </header>
+    <main>
+        <!-- highlights -->
+        <section class="container highlights">
+            <div class="card-highlights1">
+                <div class="col1-img">
+                    <h2>Get a demo application</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat dolorum obcaecati numquam eius, quae inventore laboriosam cupiditate.</p>
+                    <button class="button app-store"><i class="fa-brands fa-apple"></i>  App  Store</button>
+                </div>
+                <div class="col2">
+                    <img src="css/img/phone.png" alt="" class="img-highlights">
+                </div>
+            </div>
+            <div class="card-highlights2">
+                <div class="col1">
+                    <div class="icon-highlights"><i class="fa-solid fa-file-code"></i></div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat dolorum obcaecati numquam eius, quae inventore laboriosam cupiditate.</p>
+                </div>
+            </div>
+            <div class="card-highlights">
+                <div class="col1">
+                    <div class="icon-highlights"><i class="fa-solid fa-compass-drafting"></i></div>
+                    <h2>Web Desing</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat dolorum obcaecati numquam eius, quae inventore laboriosam cupiditate.</p>
+                </div>
+            </div>
+            <div class="card-highlights">
+                <div class="col1">
+                    <div class="icon-highlights"><i class="fa-solid fa-laptop-code"></i></div>
+                    <h2>Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat dolorum obcaecati numquam eius, quae inventore laboriosam cupiditate.</p>
+                </div>
+            </div>
+            <div class="card-highlights">
+                <div class="col1">
+                    <div class="icon-highlights"><i class="fa-solid fa-bullhorn"></i></div>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat dolorum obcaecati numquam eius, quae inventore laboriosam cupiditate.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
