--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
                 </div>
             </div>
         </section>
+        <!-- strategic planning -->
+        <section class="container strategic">
+            <div class="planning1">
+                <img src="css/img/planning1.png" alt="" class="planning1-img">
+                <h2>Strategic Planning</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eligendi aliquid similique nesciunt modi beatae autem perspiciatis quaerat, sunt facere tenetur! Odit nam aperiam in reiciendis, atque aliquid quaerat molestiae?</p>
+            </div>
+            <div class="planning2">
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
